--- a/age comparison/index.html
+++ b/age comparison/index.html
@@ -27,7 +27,7 @@
       height: 100vh;
       object-fit: cover;
       z-index: 0;
-      opacity: ;
+      opacity: 1;
       filter: blur(4px);
       pointer-events: none;
     }
